# slang

./: -  .clang-format  .clangd  .coderabbit.yaml  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .ignore  .lldbinit  .luarc.json  .stylua.toml  .travis.yml  1.glsl  1.hlsl  10.hlsl  11.unknown  13.dxbc  14.dxbc-asm  16.dxbc  18.unknown  19.hlsl  2.hlsl  20.dxbc  2025-07-10-can-you-check-if-gh-cli-cmd-is-presemt-httpsgit.txt  21.dxbc-asm  3.spv-asm  5.dxbc  6.dxbc-asm  7.unknown  8.hlsl  9.dxbc  9.unknown  AGENTS.md  BACKWARD_PERF_ANALYSIS.md  CLAUDE.local.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  (+190 more)
examples/: CMakeLists.txt
examples/autodiff-texture/: CMakeLists.txt  buildmip.slang  convert.slang  draw-quad.slang  learnmip.slang  main.cpp  reconstruct.slang  shaders.slang  train.slang
examples/cpu-com-example/: CMakeLists.txt  main.cpp  shader.slang
examples/cpu-hello-world/: CMakeLists.txt  cpu-hello-world.vcxproj  cpu-hello-world.vcxproj.filters  main.cpp  shader.slang
examples/cpu-hello-world-het/: cpu-hello-world-het.vcxproj  shader.cpp  shader.h
examples/cpu-shader-llvm/: CMakeLists.txt  README.md  jit.cpp  link.cpp  shader.slang
examples/example-base/: example-base.cpp  example-base.h  test-base.cpp  test-base.h
examples/example-main/: main.cpp
examples/example-winmain/: main.cpp
examples/gpu-printing/: CMakeLists.txt  README.md  gpu-printing-ops.h  gpu-printing.cpp  gpu-printing.h  gpu-printing.vcxproj  gpu-printing.vcxproj.filters  kernels.slang  main.cpp  printing.slang
examples/hello/: README.md  hello.cpp  hello.slang  hello.sln  hello.vcxproj  hello.vcxproj.filters
examples/hello-world/: CMakeLists.txt  format-example.cpp  hello-world.slang  hello-world.vcxproj  main.cpp  shaders.slang  vulkan-api.cpp  vulkan-api.h
examples/heterogeneous-hello-world/: README.md  heterogeneous-hello-world.vcxproj  heterogeneous-hello-world.vcxproj.filters  main.cpp  main.slang  shader.cpp  shader.slang
examples/mesh-shader-demo/: main.cpp  rotating-triangle.slang
examples/mlp-training/: CMakeLists.txt  README.md  adam.slang  common.slang  kernels.slang  mlp-training.cpp  mlp_sw.slang  mlvec_sw.slang  network.slang
examples/mlp-training-coopvec/: CMakeLists.txt  README.md  adam.slang  fflayer.slang  kernels.slang  mlp-training-coopvec.cpp  mlp.slang  mlvec.slang  network.slang
examples/model-viewer/: CMakeLists.txt  cube.mtl  main.cpp  model-viewer.vcxproj  model-viewer.vcxproj.filters  shaders.slang
examples/nv-aftermath-example/: CMakeLists.txt  README.md  main.cpp  shaders.slang
examples/platform-test/: CMakeLists.txt  main.cpp
examples/pytorch-kernel/: torch.slang
examples/ray-tracing/: CMakeLists.txt  main.cpp  shaders.slang
examples/ray-tracing-pipeline/: CMakeLists.txt  README.md  main.cpp  shaders.slang
examples/reflection-api/: CMakeLists.txt  README.md  compute-simple.slang  main.cpp  raster-simple.slang
examples/reflection-parameter-blocks/: CMakeLists.txt  common.slang  main.cpp  shader.slang  vulkan-api.cpp  vulkan-api.h
examples/shader-coverage-backends/: .gitignore  CMakeLists.txt  README.md  hello-coverage.slang  main.cpp  run-backends.ps1  run-backends.sh  vk_compute_demo.cpp  vk_compute_demo.h
examples/shader-coverage-bvh-traversal/: CMakeLists.txt  README.md  bvh_traverse.slang  bvh_types.slang  main.cpp  materials.slang  ray_intersect.slang  run_coverage.py  vk_compute_demo.cpp  vk_compute_demo.h
examples/shader-coverage-demo/: CMakeLists.txt  README.md  main.cpp  physics.slang  simulate.slang
examples/shader-coverage-image-pipeline/: .gitignore  CMakeLists.txt  README.md  denoise.slang  gamma.slang  main.cpp  pipeline.slang  run_coverage.py  tonemap.slang  vk_compute_demo.cpp  vk_compute_demo.h
examples/shader-coverage-inprocess-demo/: CMakeLists.txt  README.md  app.slang  main.cpp  math.slang  physics.slang
examples/shader-coverage-tutorial/: .gitattributes  .gitignore  README.md  expected-host-output.txt  expected.lcov  hello-coverage-host.cpp  hello-coverage.slang  run-tutorial.ps1  run-tutorial.sh
examples/shader-object/: CMakeLists.txt  main.cpp  shader-object.slang
examples/shader-toy/: CMakeLists.txt  example-effect.slang  main.cpp  shader-toy.slang
examples/stacktrace-windows/: common.cpp  common.h
examples/triangle/: CMakeLists.txt  main.cpp  shaders.slang
examples/wgpu-html5/: example.js  shader.slang
examples/wgpu-slang-wasm/: README.md
prelude/: CLEANUP_VOID_DIAGNOSTIC_NOTE.md  CMakeLists.txt  FRAGMENT_REFACTOR_ANALYSIS.md  FRAGMENT_REFACTOR_PLAN.md  M16N16K16_HANDOFF.md  M16N16K16_REFACTOR_PLAN.md  MMA_HANDOFF.md  MMA_NEW_HELPER_BACKWARD_HANDOFF.md  MMA_NEW_HELPER_HANDOFF.md  MMA_VERIFICATION.md  TILED_MMA_REFACTOR_HANDOFF.md  TINY_BACKWARD_HANDOFF.md  WAVEMATRIX_VULKAN_PLAN.md  WMMA_IMPLEMENTATION_PLAN.md  slang-cpp-host-prelude.h  slang-cpp-prelude.h  slang-cpp-scalar-intrinsics.h  slang-cpp-types-core.h  slang-cpp-types.h  slang-cuda-prelude.h  slang-hlsl-prelude.h  slang-llvm-prelude.ll  slang-llvm.h  slang-torch-prelude.h
source/compiler-core/: CMakeLists.txt  slang-artifact-associated-impl.cpp  slang-artifact-associated-impl.h  slang-artifact-associated.h  slang-artifact-container-util.cpp  slang-artifact-container-util.h  slang-artifact-desc-util.cpp  slang-artifact-desc-util.h  slang-artifact-diagnostic-util.cpp  slang-artifact-diagnostic-util.h  slang-artifact-handler-impl.cpp  slang-artifact-handler-impl.h  slang-artifact-helper.cpp  slang-artifact-helper.h  slang-artifact-impl.cpp  slang-artifact-impl.h  slang-artifact-info.cpp  slang-artifact-info.h  slang-artifact-representation-impl.cpp  slang-artifact-representation-impl.h  slang-artifact-representation.cpp  slang-artifact-representation.h  slang-artifact-util.cpp  slang-artifact-util.h  slang-artifact.cpp  slang-artifact.h  slang-char-slice-allocator.cpp  slang-char-slice-allocator.h  slang-command-line-args.cpp  slang-command-line-args.h  slang-core-diagnostic-defs.h  slang-core-diagnostics.cpp  slang-core-diagnostics.h  slang-diagnostic-sink.cpp  slang-diagnostic-sink.h  slang-doc-extractor.cpp  (+93 more)
(+13930 files in other folders)
